fix rendering issue for weather spheres on mobile, correct background animates when power for sun and rain are both at maximum

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -8,7 +8,7 @@
 }
 
 .top-bar-container {
-  width: 16.7em;
+  width: 20em;
   margin: 40px auto 0;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@
   }
 
   .top-bar-container {
-    width: 24.5em;
+    width: 28em;
     margin: 60px auto 0;
   }
 }
