--- a/src/scss/_tiles.scss
+++ b/src/scss/_tiles.scss
@@ -115,7 +115,7 @@
   }
 
   .sun, .rain {
-    padding: 10px;
+    padding: 9px;
   }
 
   .seedling {
